--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -260,7 +260,6 @@
 }
 
 .main-content {
-    flex: 1;
     padding: 40px;
     background-color: #fff;
     display: flex;
@@ -273,6 +272,8 @@
     overflow-y: auto;
     min-height: calc(100vh - 40px);
     overflow-x: hidden;
+    width: calc(100vw - 330px);
+    margin-left: auto;
 }
 
 .basic-body {
@@ -481,6 +482,11 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 45px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
 }
 
 .sidebar-header {
@@ -1138,7 +1144,7 @@ audio,
 
     .sidebar-toggle {
         display: block;
-        position: fixed;
+        position: absolute;
         left: 40px;
         top: 40px;
         z-index: 1001;
@@ -1518,6 +1524,20 @@ audio,
 
 .typing .dot:last-child {
     margin-right: 0;
+}
+
+.mainHeading h2 {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.mainHeading p {
+    text-align: center;
+    font-size: 0.8rem;
+    color: #666F8D;
+    max-width: 400px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 @keyframes mercuryTypingAnimation {
