--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -532,7 +532,7 @@
 .user-avatar img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
     border-radius: 50%;
 }
