--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -304,7 +304,8 @@
 .quick-summary,
 .detailed-summary,
 .timestamp-breakdown,
-.summary-video {
+.summary-video,
+.upgrade-section {
     border: 1px solid #D9D9D9;
     padding: 15px;
     border-radius: 12px;
@@ -368,7 +369,8 @@
 
 .quick-summary h3,
 .detailed-summary h3,
-.timestamp-breakdown h3 {
+.timestamp-breakdown h3,
+.upgrade-section h3 {
     font-size: 18px;
     font-weight: bold;
     color: #333;
@@ -379,13 +381,15 @@
 }
 
 .quick-summary ul,
-.timestamp-breakdown ul {
+.timestamp-breakdown ul,
+.upgrade-section ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.timestamp-breakdown ul {
+.timestamp-breakdown ul,
+.upgrade-section ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -393,7 +397,8 @@
 }
 
 .quick-summary li,
-.timestamp-breakdown li {
+.timestamp-breakdown li,
+.upgrade-section li {
     font-size: 0.7rem;
     color: #666;
     margin-bottom: 8px;
@@ -401,7 +406,8 @@
     align-items: center;
 }
 
-.timestamp-breakdown li {
+.timestamp-breakdown li,
+.upgrade-section li {
     width: 50%;
 }
 
@@ -1113,7 +1119,9 @@ audio,
 }
 
 @media (max-width: 425px) {
-    .timestamp-breakdown ul li {
+
+    .timestamp-breakdown ul li,
+    .upgrade-section ul li {
         width: 100%;
     }
 
